--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                 <div class="ball position-absolute start-0 top-0 start-over-1"></div>
                 <div class="ball position-absolute start-0 bottom-0"></div>
                 <h5>(2011-now)</h5>
-                <h5>WARDIERE UNIVERSITY</h5>
-                <p>Bachelor Of Design</p>
+                <h5>UKM PSQ UNTIRTA</h5>
+                <p>Art and Depelopment Departement </p>
               </div>
 
               <h4 class="d-flex justify-content-start mt-4">
@@ -132,7 +132,7 @@
                 <div class="ball position-absolute start-0 top-0 start-over-1"></div>
                 <div class="ball position-absolute start-0 bottom-0"></div>
                 <h5>(2023)</h5>
-                <h5>LOGIKA HIMATIKA UNSIL</h5>
+                <h5>LOGIKA HIMATIKA FKIP UNTIRTA</h5>
                 <p>1St Place in the Mathemathics Gallery Competition</p>
               </div>
               <h4 class="d-flex justify-content-start mt-4">
